syntax = "proto3";

package api;
option go_package = "controlplane/apiproto";

message AuthRequest {
    string password = 1;
    string user_name = 2;
}

message Empty {
}

message AuthResponse {
    repeated string groups = 1;
    int64 expires_at = 2;
    bool passthrough = 3;
}

message DataSourceResponse {
    string data_source_name = 1;
}

message InspektorPolicy {
    bytes wasm_byte_code = 1;
}

message MetricsRequest {
    repeated Metric metrics = 1;
    repeated string groups = 2;
}

message Metric {
    string collection_name = 1;
    repeated string property_name = 2;
}

message IntegrationConfigResponse {
    CloudWatchConfig cloud_watch_config = 1;
    AuditLogConfig audit_log_config = 2;
}

message CloudWatchConfig {
    string cred_type = 1;
    string region_name = 2;
    string access_key = 3;
    string secret_key = 4;
    string log_group_name = 5;
    string log_stream_name = 6;
}

message AuditLogConfig {
    string log_prefix = 1;
}

service Inspektor {
    rpc Auth(AuthRequest) returns (AuthResponse) {}
    rpc Policy(Empty) returns (stream InspektorPolicy){}
    rpc GetDataSource(Empty) returns (DataSourceResponse) {}
    rpc SendMetrics(MetricsRequest) returns (Empty) {}
    rpc GetIntegrationConfig(Empty) returns (IntegrationConfigResponse) {}
}